Implement package metadata resolution and remove Kafka requirement
* Implements durable workflow to resolve package metadata.
* Migrates legacy RepositoryMetaComponent and IntegrityMetaComponent models to PackageMetadata and PackageArtifactMetadata, in accordance with ADR-015.
* Replaces dedicated integrity analysis task with ad-hoc checks. This is enabled by PackageArtifactMetadata being joinable with Component.
* Removes all Kafka-related infrastructure. Only remaining use of Kafka is for notification publishing, which is entirely optional.

This concludes our quest to remove the Kafka requirement for good. The whole platform can now sustain itself with only Postgres.

Signed-off-by: nscuro <nscuro@protonmail.com>